[project]
name = "w3c-activity-streams"
version = "0.1.0"
description = "Python implementation of the W3C Activity Streams 2.0 protocol"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "pydantic>=2.13.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
